--- a/index.html
+++ b/index.html
@@ -4,17 +4,259 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>B11-Assignment: 01</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="assets/hero.png">
   <link rel="stylesheet" href="Styles/style.css">
 </head>
-<body>
+<body class="body">
   <header>
-
+    <nav>
+      <h3 class="nav-title">Bangladesh 2.0</h3>
+      <ul>
+        <li><button class="sign-in-btn">Sign in</button></li>
+      </ul>
+    </nav>
+    <div class="banner">
+      <div class="banner-content">
+        <div class="banner-text">
+          <h4 class="bangladesh">Bangladesh 2.0</h4>
+          <h1 class="idea">Idea , innovation ,
+            vision and challenges in New Bangladesh.</h1>
+            <button class="btn-primary">Explore New Bangladesh</button>
+        </div>
+        <img class="banner-image" src="assets/hero.png" alt="jatio sritishoudho image">
+      </div>
+    </div>
   </header>
   <main>
+    <section class="section-01">
+        <h2 class="headline">Pillars of "Bangladesh 2.0"</h2>
+        <div class="">
+          <div class="section-box">
+            <ul class="box">
+              <li>
+                <img class="box-image" src="assets/card-icon.png" alt="logo">
+                <h3 class="title">Innovation</h3>
+                <p class="paragraph">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+              </li>
+            </ul>
+          </div>
+          <div class="section-box">
+            <ul class="box">
+              <li>
+                <img class="box-image" src="assets/card-icon.png" alt="logo">
+                <h3 class="title">Sustainability</h3>
+                <p class="paragraph">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+              </li>
+            </ul>
+          </div>
+          <div class="section-box">
+            <ul class="box">
+              <li>
+                <img class="box-image" src="assets/card-icon.png" alt="logo">
+                <h3 class="title">Infrastructure</h3>
+                <p class="paragraph">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+              </li>
+            </ul>
+          </div>
+          <div class="section-box">
+            <ul class="box">
+              <li>
+                <img class="box-image" src="assets/card-icon.png" alt="logo">
+                <h3 class="title">Empowerment</h3>
+                <p class="paragraph">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+              </li>
+            </ul>
+          </div>
+        </div>
+    </section>
 
+    <section class="visions">
+        <h3 class="section-titlee">The vision of Future</h3>
+
+        <div class="vision-head">
+          <p class="section-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+        </div>
+        <div class="vision-topic">
+          <div class="vision-01">
+            <img src="assets/card-icon.png" alt="image">
+            <h4 class="vision-title">Digital transformation</h4>
+            <p class="vision-description">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+            <button class="btn-primary-01">Learn More </button>
+          </div>
+          <div class="vision-02">
+            <img src="assets/card-icon.png" alt="image">
+            <h4 class="vision-title">Green energy</h4>
+            <p class="vision-description">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
+            <button class="btn-primary-02">Learn More </button>
+          </div>
+          <div class="vision-03">
+            <img src="assets/card-icon.png" alt="image">
+            <h4 class="vision-title">Modern Infrastructure</h4>
+            <p class="vision-description">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
+            <button class="btn-primary-03">Learn More </button>
+          </div>
+        </div>
+        <div >
+          <div class="vision-footer">
+            <p class="vision-text">
+              "Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quas, ducimus labore sequi quos deserunt optio id repellendus tempora veniam amet porro corporis exercitationem numquam debitis culpa laudantium odio, velit vel minus sit? Veritatis aut maiores ducimus fugit error ex sit, dignissimos eum tempora perferendis a rem culpa ab aliquid modi? Est vitae neque esse, cumque, quam tenetur rem earum eaque mollitia modi ipsum aspernatur, dignissimos excepturi aliquam architecto soluta necessitatibus vero?"
+            </p>
+            <div>
+              <h4 class="vision-yunus">Dr. Muhammad Yunus</h4>
+              <p class="vision-yunus-p">
+                Chief Adviser of the People's Republic of Bangladesh
+              </p>
+            </div>
+          </div>
+        </div>
+    </section>
+
+
+    <section>
+      <div class="your-opinion">
+        <div class="table-div">
+          <table>
+            <caption>Your Opinion Matters</caption>
+            <tr>
+              <th colspan="2">
+                <ul class="table-ul">
+                  <li>Questions</li> 
+                  <li class="">Select Your Option </li>
+                </ul>
+              </th>
+            </tr>
+            <tr>
+              <td>Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
+              <td><button class="opinion-button">Yes. I Agree</button></td>
+            </tr>
+            <tr>
+              <td>Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
+              <td><button class="opinion-button">Yes. I Agree</button></td>
+            </tr>
+            <tr>
+              <td>Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
+              <td><button class="opinion-button">Yes. I Agree</button></td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </section>
+
+    
+    <section>
+      <div class="news-div">
+        <div>
+          <h2 class="recent-news">Recent News</h2>
+          <div>
+            <p class="news-para:">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+
+    <article>
+      <div class="news-desk">
+        <div class="hakau-nilam">
+          <ul class="news-flex">
+            <li>
+              <img class="satelite-image" src="assets/satelite.png" alt="image">
+            </li>
+            <li>
+              <div class="news-title-div">
+                <h2 class="news-title">Bangladesh Launches New Satellite</h2>
+                <img class="news-chanal-name" src="assets/al-jazeera.png" alt="image">
+                <p>Date: 05/01/2025 Time: 10.25 PM</p>
+                <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                  with a certain degree of justification, be able to speak of humankind as civilized</p>
+                  <button class="btn-primary">Read More</button>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </article>
+
+    <article>
+      <div class="news-desk">
+        <div class="hakau-nilam">
+          <ul class="news-flex">
+            <li>
+              <div class="news-title-div-midle">
+                <h2 class="news-title">Bangladesh Launches New Satellite</h2>
+                <img class="news-chanal-name" src="assets/al-jazeera.png" alt="image">
+                <p>Date: 05/01/2025 Time: 10.25 PM</p>
+                <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                  with a certain degree of justification, be able to speak of humankind as civilized</p>
+                  <button class="btn-primary">Read More</button>
+              </div>
+            </li>
+            <li>
+              <img class="satelite-image-midle" src="assets/satelite.png" alt="image">
+            </li>
+          </ul>
+        </div>
+      </div>
+    </article>
+
+    <article>
+      <div class="news-desk">
+        <div class="hakau-nilam">
+          <ul class="news-flex">
+            <li>
+              <img class="satelite-image" src="assets/satelite.png" alt="image">
+            </li>
+            <li>
+              <div class="news-title-div">
+                <h2 class="news-title">Bangladesh Launches New Satellite</h2>
+                <img class="news-chanal-name" src="assets/al-jazeera.png" alt="image">
+                <p>Date: 05/01/2025 Time: 10.25 PM</p>
+                <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                  with a certain degree of justification, be able to speak of humankind as civilized</p>
+                  <button class="btn-primary">Read More</button>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </article>
+
+    <article>
+      <div class="donate-today">
+        <h2 class="donate-discription">Donate Today</h2>
+        <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability.<br>With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
+        <div>
+          <ul class="donate-box">
+            <li class="donate-01">100 Taka</li>
+            <li class="donate-02">200 Taka</li>
+            <li class="donate-01">500 Taka</li>
+            <li class="donate-01">1000 Taka</li>
+          </ul>
+        </div>
+        <div>
+          <input type="text" class="input-donat" placeholder="Other Amount(Taka)">
+          <div>
+            <button class="btn-primary">Donate Now</button>
+          </div>
+        </div>
+      </div>
+    </article>
   </main>
   <footer>
-    
+    <div class="footer">
+          <h1 class="footer-title">Subscribe News Letter</h1>
+          <p > Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge<br> technology, promoting inclusive growth.</p>
+          <input style="height: 55px; width: 600px; border-radius: 16px;" 
+          type="text"  placeholder="Enter your email hear">
+          <button style="height: 62px; width: 150px; border-radius: 16px; background-color:#006A50;">
+            Donate Now
+          </button>
+        <p class="footer-para:">We promise not to spam you!</p>
+
+    </div>
   </footer>
-</body>
-</html>
+  
